--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Sound board</title>
   </head>
   <body>
     <audio id="bark" src="./sounds/bark.wav"></audio>
